Dependencies updates. Kotlin 1.5.30.